--- a/src/dapp/flightsurety.css
+++ b/src/dapp/flightsurety.css
@@ -12,6 +12,16 @@ body {
     padding: 40px;
 }
 
+.results {
+    margin-top: 80px;
+    margin-right: 0px;
+    width: 40%;
+    background-color: #000;
+    opacity: 0.7;
+    color: #fff;
+    padding: 40px;
+}
+
 .top-20 {
     margin-top: 20px;
 }
